[package]
name = "cita_trie"
version = "0.0.0"
publish = false
authors = ["yejiayu <yejiayu.fe@gmail.com>"]
description = "Modified Patricia Tree (aka Trie)."
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
keywords = ["patricia", "mpt", "evm", "trie", "ethereum"]
repository = "https://github.com/cryptape/cita-trie"
homepage = "https://github.com/cryptape/cita-trie"
documentation = "https://docs.rs/cita_trie"

[dependencies]
parking_lot = "0.11"
rlp = "0.5"
hasher = { version = "0.1", features = ["hash-keccak"] }

[dev-dependencies]
rand = "0.8"
hex = "0.4"
criterion = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }

[[bench]]
name = "trie"
harness = false
